--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /tic_tac_toe/TicTacToe.Logic/bin/Debug/net8.0
 /tic_tac_toe/TicTacToe.Logic/.vs/TicTacToe.Logic
 /.vs
+/tic_tac_toe/TicTacToe.Logic/.vs/ProjectEvaluation
