--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /tic_tac_toe/TicTacToe.Logic/.vs/TicTacToe.Logic
 /.vs
 /tic_tac_toe/TicTacToe.Logic/.vs/ProjectEvaluation
+/tic_tac_toe/TicTacToe.Logic/obj/Release/net8.0
