Initialize Color Helper App

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /game_of_life/GoL.Logic/.vs/GoL.Logic
 /game_of_life/GoL.Logic/bin/Debug/net8.0
 /game_of_life/GoL.Logic/obj
+/color_helper/ColorHelper.Logic/.vs/ColorHelper.Logic
+/color_helper/ColorHelper.Logic/bin/Debug/net8.0
+/color_helper/ColorHelper.Logic/obj
+/game_of_life/GoL.Logic/.vs/ProjectEvaluation
