--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 /color_helper/ColorHelper.Logic/bin/Debug/net8.0
 /color_helper/ColorHelper.Logic/obj
 /game_of_life/GoL.Logic/.vs/ProjectEvaluation
+/color_helper/ColorHelper.Logic/.vs/ProjectEvaluation
+/tamagochi/Tamagochi.Logic/.vs/Tamagochi.Logic
+/tamagochi/Tamagochi.Logic/bin/Debug/net8.0
+/tamagochi/Tamagochi.Logic/obj
