Init Lambda Emoji

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 /tamagochi/Tamagochi.Logic/.vs/Tamagochi.Logic
 /tamagochi/Tamagochi.Logic/bin/Debug/net8.0
 /tamagochi/Tamagochi.Logic/obj
+/tamagochi/Tamagochi.Logic/.vs/ProjectEvaluation
+/lambda_emoji/LambdaEmoji.Logic/obj
+/lambda_emoji/LambdaEmoji.Logic/.vs/LambdaEmoji.Logic
+/lambda_emoji/LambdaEmoji.Logic/bin/Debug/net8.0
