--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /lambda_emoji/LambdaEmoji.Logic/obj
 /lambda_emoji/LambdaEmoji.Logic/.vs/LambdaEmoji.Logic
 /lambda_emoji/LambdaEmoji.Logic/bin/Debug/net8.0
+/lambda_emoji/LambdaEmoji.Logic/.vs/ProjectEvaluation
