--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@
 /lambda_emoji/LambdaEmoji.Logic/.vs/LambdaEmoji.Logic
 /lambda_emoji/LambdaEmoji.Logic/bin/Debug/net8.0
 /lambda_emoji/LambdaEmoji.Logic/.vs/ProjectEvaluation
+/regex_helper/RegexHelper.Logic/.vs/RegexHelper.Logic
+/regex_helper/RegexHelper.Logic/obj/Debug/net8.0
+/regex_helper/RegexHelper.Logic/obj/Debug/net8.0
+/regex_helper/RegexHelper.Logic/.vs/RegexHelper.Logic
+/regex_helper/RegexHelper.Logic/.vs/RegexHelper.Logic
+/regex_helper/RegexHelper.Logic/.vs/RegexHelper.Logic
+/regex_helper/RegexHelper.Logic/obj/Debug/net8.0
+/regex_helper/.vs
+/regex_helper/RegexHelper.Logic/.vs/ProjectEvaluation
+/regex_helper/RegexHelper.Logic/obj/Release/net8.0
+/regex_helper/RegexHelper.Logic/obj
