--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /regex_helper/RegexHelper.Logic/.vs/ProjectEvaluation
 /regex_helper/RegexHelper.Logic/obj/Release/net8.0
 /regex_helper/RegexHelper.Logic/obj
+/regex_helper/RegexHelper.Logic/bin/Debug/net8.0
