--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@
 /regex_helper/RegexHelper.Logic/obj/Release/net8.0
 /regex_helper/RegexHelper.Logic/obj
 /regex_helper/RegexHelper.Logic/bin/Debug/net8.0
+/animated_strings/AnimatedStrings.Logic/.vs/AnimatedStrings.Logic
+/animated_strings/AnimatedStrings.Logic/bin/Debug/net8.0
+/animated_strings/AnimatedStrings.Logic/obj
