--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /animated_strings/AnimatedStrings.Logic/.vs/AnimatedStrings.Logic
 /animated_strings/AnimatedStrings.Logic/bin/Debug/net8.0
 /animated_strings/AnimatedStrings.Logic/obj
+/animated_strings/AnimatedStrings.Logic/.vs/ProjectEvaluation
+/window_manipulation/.vs
