--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@
 /animated_strings/AnimatedStrings.Logic/obj
 /animated_strings/AnimatedStrings.Logic/.vs/ProjectEvaluation
 /window_manipulation/.vs
+/window_manipulation/WindowManipulation.Logic/.vs/WindowManipulation.Logic
+/window_manipulation/WindowManipulation.Logic/obj
+/window_manipulation/WindowManipulation.Logic/bin/Debug/net8.0
